--- a/package.json
+++ b/package.json
@@ -9,13 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next/bundle-analyzer": "^13.4.1",
     "@react-three/drei": "^9.65.5",
     "@react-three/fiber": "^8.12.2",
     "gsap": "^3.11.5",
+    "i18n": "^0.15.1",
     "next": "13.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "three": "^0.151.3"
+    "three": "^0.152.2"
   },
   "devDependencies": {
     "eslint": "8.38.0",
