--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@react-three/fiber": "^8.12.2",
     "gsap": "^3.11.5",
     "i18n": "^0.15.1",
-    "next": "13.3.0",
+    "next": "^16.0.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "three": "^0.152.2"
